--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,4 +23,26 @@ body {
 
 .menu {
     grid-column: 3 / 5;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background-color: #fb5;
+}
+
+.menu ul {
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.menu li a {
+    display: block;
+    padding: 10px;
+    margin-right: 10px;
+    color: #222;
+    text-decoration: none;
+    font-family: 'IBM Plex Mono', monospace;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 0.875rem;
+    letter-spacing: .1rem;
 }
